Add more serg members

--- a/thesis-defense/index.html
+++ b/thesis-defense/index.html
@@ -300,6 +300,7 @@
                     Chiel, <span class=title>React native feedback expert</span>, Bruin<br>
                     Liam, <span class=title>Makes sure my feelings are ok</span>, Clark<br>
                     Luís, <span class=title>Fellow train traveler</span>, Cruz<br>
+                    Xavier, <span class=title>Gives me confidence I will make it today</span>, Devroey<br>
                     Jean, <span class=title>we moeten echt nog een keer afspreken</span>, de Leeuw<br>
                     Floris, <span class=title>Machine learning expert</span>, den Hengst<br>
                     Job, <span class=title>Lord dhr dr Srgt Ir Koning Inventor</span>, Engel<br>
@@ -321,10 +322,12 @@
                     Chris, <span class=title>Niet cool genoeg voor diamant</span>, Lemaire<br>
                     Fransesca, <span class=title>Beste vragen steller</span>, Lucas<br>
                     Marielenne, <span class=title>bikkelhard</span>, Martens<br>
+                    Amir, <span class=title>is always up for a conversation</span>, Mir<br>
                     Frank, <span class=title>Python master en OOP buddy</span>, Mulder<br>
                     Ernst, <span class=title>AB-solutely cool</span>, Mulders<br>
                     Mitchell, <span class=title>Will open doors for you</span>, Olsthoorn<br>
                     Thomas, <span class=title>knows how to bbq</span>, Overklift<br>
+                    Annibale, <span class=title>is adequately angry at bad papers</span>, Panichella<br>
                     Drieke, <span class=title>gives you all the awesome things you need for your home</span>, Post<br>
                     Peter, <span class=title>knows what is going on in the world</span>, Post<br>
                     Sebastian, <span class=title>Unmissable</span>, Proksch<br>
