Redo main website. Its cute now

--- a/index.html
+++ b/index.html
@@ -1,102 +1,55 @@
-<!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>NNTN</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description"
-        content="I am a student at the TU Delft studying computer sciences. I do everything with software engineering. I am fascinated with design, how the world works and everything else. " />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Martijn Steenbergen" />
-    <meta name="twitter:description"
-        content="I am a student at the TU Delft studying computer sciences. I do everything with software engineering. I am fascinated with design, how the world works and everything else. " />
-    <meta name="twitter:site" content="@mjwsteenbergen">
-    <meta name="twitter:creator" content="@mjwsteenbergen">
-    <meta name="twitter:image" content="https://nntn.nl/profile.jpg">
-    <meta property="og:site_name" content="NNTN" />
-    <meta property="og:title" content="Martijn Steenbergen" />
-    <meta property="og:description"
-        content="I am a student at the TU Delft studying computer sciences. I do everything with software engineering. I am fascinated with design, how the world works and everything else. " />
-    <link rel="stylesheet" type="text/css" media="screen" href="files/main.css" />
-    <script src="main.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Martijn Steenbergen | NNTN</title>
+    <link rel="stylesheet" type="text/css" href="base.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-    <div id=cover>
-        <div id=cover-plaque>
-            <div>
-                Martijn Steenbergen
-            </div>
-        </div>
-    </div>
-    <div id=aboutme>
-        <p>
-            <span>Hi,</span> My name is Martijn Steenbergen.
-            <br> I am a student at the TU Delft studying computer sciences. I do everything with software engineering.
-            <br> I am fascinated with design, how the world works and everything else.
-        </p>
-    </div>
-    <div id=projects>
-        <h1>My Projects</h1>
-        <div id=project-container>
-            <div class=project>
-                <iframe class=img src="https://nntn.nl"></iframe>
-                <div class=desc>                
-                    <h2>NNTN</h2>
-                    <p>The ongoing quest to create a beautiful website</p>
-                    <a href="https://github.com/mjwsteenbergen/mjwsteenbergen.github.io" target="blank">Read more</a>
-                </div>
-            </div>
-            <div class=project href="https://gpd.today/" target="blank">
-                <div class=img style="background-image: url('files/project-pic/markender.jpg')"></div>
-                <div class=desc>
-                    <h2>Markender</h2>
-                    <p>WebComponents to enhance your reports</p>
-                    <a href="https://github.com/mjwsteenbergen/markender" target="blank">Read more</a>
-                </div>
-            </div>
-            <div class=project>
-                <div class=img style="background-image: url('files/project-pic/Ares.jpg')"></div>
-                <div class=desc>
-                    <h2>Ares</h2>
-                    <p>A chatbot to quickly excecute automations</p>
-                    <a href="https://medium.com/@newnottakenname/the-architecture-of-my-life-c286964eb2c1" target="blank">Read more</a>
-                </div>
-            </div>
-            <div class=project>
-                <div class=img style="background-image: url('files/project-pic/playlister.png')"></div>
-                <div class=desc>
-                    <h2>Playlister</h2>
-                    <p>Generate amazing playlists using the Spotify API</p>
-                    <a href="https://medium.com/@newnottakenname/the-architecture-of-my-life-c286964eb2c1" target="blank">Read more</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id=contactme>
-        <!-- <h1>Links</h1> -->
+    <div id=hero>
+        <div id=introduction>
+            <img class="profile-picture" src="https://avatars0.githubusercontent.com/u/5946409" />
+    
+            <h1>Hi!</h1>
+            <h2>I'm Martijn Steenbergen</h2>
+            <p>
+                I am a student at the TU Delft studying computer sciences. 
+                <br> I do everything with software engineering.
+                <br> I am fascinated with design, how the world works and everything else.
+            </p>
 
-        <div id=contactmecontainer>
-            <a href="https://www.linkedin.com/in/mjwsteenbergen/" target="blank">
-                <img src="./files/logos/logo-linkedin.svg">
-            </a>
-            <a href="https://twitter.com/newnottakenname" target="blank">
-                <img src="./files/logos/logo-twitter.svg">
-            </a>
-            <a href="http://t.me/newnottakenname" target="blank">
-                <img src="./files/logos/paper-plane-sharp.svg">
-            </a>
-            <a href="https://github.com/mjwsteenbergen/" target="blank">
-                <img src="./files/logos/logo-github.svg">
-            </a>
+            <div class=outgoing>
+                <a href="https://lnk.nntn.nl/cv" target="blank">
+                    View my CV |
+                    <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512">
+                        <title>Arrow Forward</title>
+                        <path fill="none" stroke="currentColor" stroke-linecap="square" stroke-miterlimit="10" stroke-width="48"
+                            d="M268 112l144 144-144 144M392 256H100" />
+                    </svg>
+                </a>
+                <a href="https://www.linkedin.com/in/mjwsteenbergen/" target="blank">
+                    My LinkedIn |
+                    <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512">
+                        <title>Arrow Forward</title>
+                        <path fill="none" stroke="currentColor" stroke-linecap="square" stroke-miterlimit="10" stroke-width="48"
+                            d="M268 112l144 144-144 144M392 256H100" />
+                    </svg>
+                </a>
+                <a href="https://github.com/mjwsteenbergen/" target="blank">
+                    My GitHub |
+                    <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512">
+                        <title>Arrow Forward</title>
+                        <path fill="none" stroke="currentColor" stroke-linecap="square" stroke-miterlimit="10" stroke-width="48"
+                            d="M268 112l144 144-144 144M392 256H100" />
+                    </svg>
+                </a>
+            </div>
 
         </div>
-
-    </div>
-    <div id=copyright>
-        Newnottakenname | Sponsored By: Jenneke Ringnalda | Hosted by: Github | All rights reserved
+        <div class="cover-picture"></div>
     </div>
 </body>
 
