Update my summary

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
             <h1>Hi!</h1>
             <h2>I'm Martijn Steenbergen</h2>
             <p>
-                I am a student at the TU Delft studying computer sciences. 
-                <br> I do everything with software engineering.
-                <br> I am fascinated with design, how the world works and everything else.
+                I am a Software Engineer at BOL.com, helping you find what you need
+                <br> I got my M.Sc. at the wonderful <a href="https://se.ewi.tudelft.nl/" target="blank">Technical University of Delft</a>
+                <br> I love <a href="https://blog.nntn.nl/architecture-of-my-life-2021" target="blank">automating anything and everything</a>
+                <br> I'm fascinated with design, how the world works and everything else
             </p>
 
             <div class=outgoing>
