[place] connect to js

--- a/place/index.html
+++ b/place/index.html
@@ -58,7 +58,7 @@
       }
     </style>
     <title>Places</title>
-    <script type="module" crossorigin src="/assets/path.e8ceeb65.js"></script>
+    <script type="module" crossorigin src="/place/assets/path.e8ceeb65.js"></script>
   </head>
   <body>
     <div id="map"></div>
