--- a/place/index.html
+++ b/place/index.html
@@ -9,7 +9,7 @@
   <style>
     @font-face {
       font-family: "DIN Pro";
-      src: url("/fonts/DIN-Pro-400.otf");
+      src: url("/place/fonts/DIN-Pro-400.otf");
     }
 
     @supports (height: 100dvh) {
@@ -38,7 +38,7 @@
         grid-template-rows: 1fr auto;
       }
 
-      #text place-details {
+      #text > * {
         height: 66vh;
       }
     }
@@ -92,7 +92,7 @@
     }
   </style>
   <title>Places</title>
-  <script type="module" crossorigin src="/place/assets/path.75d9c331.js"></script>
+  <script type="module" crossorigin src="/place/assets/path.4ae9fb9d.js"></script>
 </head>
 
 <body>
