--- a/place/index.html
+++ b/place/index.html
@@ -92,15 +92,14 @@
     }
   </style>
   <title>Places</title>
-  <script type="module" crossorigin src="/place/assets/path.838ade4f.js"></script>
+  <script type="module" crossorigin src="/place/assets/path.998dfb76.js"></script>
 </head>
 
 <body>
   <main>
-    <section id="map"></section>
+    <places-map></places-map>
     <section id="text"></section>
   </main>
-  
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   
 </body>
