--- a/merry-christmas/index.html
+++ b/merry-christmas/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/merry-christmas/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <link href="/merry-christmas/font/font.css" rel="stylesheet">
     <title>Merry Christmas!</title>
-    <script type="module" crossorigin src="/merry-christmas/assets/path.6a172797.js"></script>
-    <link rel="stylesheet" href="/merry-christmas/assets/index.919a7836.css">
+    <script type="module" crossorigin src="/merry-christmas/assets/path.ba08e63e.js"></script>
+    <link rel="stylesheet" href="/merry-christmas/assets/index.f48424b5.css">
   </head>
   <body>
     <data-store></data-store>    
@@ -23,9 +22,9 @@
     </header>
     <memory-wrapper></memory-wrapper>
     <footer>
-      <p>
+      <p style="background-color: #285b52;">
         <span>Built by Martijn, who hopes you enjoyed it</span>
-        <span>Built by Martijn with StencilJS & Vite</span>
+        <span><a target="_blank" href="https://github.com/mjwsteenbergen/christmas-card">Built by Martijn with StencilJS & Vite</a></span>
         <span>Built by Martijn who wishes you the best for 2023</span>
       </p>
     </footer>
